--- a/cliente/src/componentes/Formulario/formularios.css
+++ b/cliente/src/componentes/Formulario/formularios.css
@@ -5,8 +5,16 @@
     align-items: center;
     gap: 16px;
 
-    padding: 22px;
-    margin: 0 auto;
+   max-height: calc(100dvh - 80px); /* margen arriba/abajo */
+   overflow-y: auto;
+   overflow-x: hidden;
+
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
+
+  -webkit-overflow-scrolling: touch; /* mobile smooth */
+    
 
     background: var(--color-gradiente-azul);
     border-radius: 14px;
@@ -16,6 +24,37 @@
     animation: fadeInForm 0.4s ease;
     transition: box-shadow 0.25s ease;
 }
+
+/* ================= Colorear el scrool  ================= */
+.formulario::-webkit-scrollbar {
+  width: 8px;
+}
+
+.formulario::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 10px;
+}
+
+.formulario::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    180deg,
+    #4f46e5,
+    #06b6d4,
+    #a855f7
+  );
+  border-radius: 10px;
+}
+
+.formulario::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(
+    180deg,
+    #6366f1,
+    #22d3ee,
+    #c084fc
+  );
+}
+
+
 
 .formulario:hover {
     box-shadow: 0 10px 26px rgba(0,0,0,0.35);
